# my-cpp-project-template

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  Makefile
cmake/: clang_format.cmake  cmake_format.cmake  google_benchmark.cmake  google_test.cmake
src/: CMakeLists.txt  sample1.cc
tests/: CMakeLists.txt  example_benchmark.cc  sample1_unittest.cc
